<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondActivity">

    <RadioGroup
            android:id="@+id/input_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
    >

        <TextView
                android:id="@+id/input_gender_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_groups_gender"
                android:textSize="24sp"
        />

        <RadioButton
                android:id="@+id/input_gender_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_gender_male"
                android:textSize="18sp"/>

        <RadioButton
                android:id="@+id/input_gender_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_gender_female"
                android:textSize="18sp"/>

    </RadioGroup>

    <RadioGroup
            android:id="@+id/input_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_below="@+id/input_gender"
    >

        <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_groups_about"
                android:textSize="24sp"
        />

        <CheckBox android:id="@+id/input_about_poland"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/input_about_poland"
        />

        <CheckBox android:id="@+id/input_about_developer"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/input_about_developer"
        />

        <CheckBox android:id="@+id/input_about_sing"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/input_about_sing"
        />

        <CheckBox android:id="@+id/input_about_cook"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/input_about_cook"
        />

        <CheckBox android:id="@+id/input_about_tired"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/input_about_tired"
        />

    </RadioGroup>

    <Button
            android:id="@+id/button_summary"
            android:text="@string/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
    />

</RelativeLayout>